# test_HardQode

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  setup.cfg
training_system/: asgi.py  settings.py  urls.py  wsgi.py
training_system/api/: admin.py  apps.py  models.py  serializers.py  views.py
training_system/api/migrations/: 0001_initial.py
