[tool.poetry]
name = "test-hardqode"
version = "0.1.0"
description = ""
authors = ["Dmitriy Parfimovich <dparf@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
django = "^4.2.6"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
